# LINAL-eindopdracht

./: .gitignore  CMakeLists.txt  LINAL-eindopdracht.sln  README.md
LINAL-eindopdracht/: LINAL-eindopdracht.vcxproj  LINAL-eindopdracht.vcxproj.filters  axesenderer.cpp  axesenderer.h  drawable.h  main.cpp  math.h  render.h  vector.cpp  vector.h
LINAL-eindopdracht/Math/: types.h
LINAL-eindopdracht/Render/: color.h  graph.h  renderer.h  util.h
engine/: CMakeLists.txt
engine/include/engine/: math.hpp  render.hpp
engine/include/engine/input/: inputhandler.hpp
engine/include/engine/math/: basic_matrix.hpp  basic_vector.hpp  default.hpp  matrix.hpp  matrix2D.hpp  matrix3D.hpp  transform.hpp  transform2D.hpp  transform3D.hpp  types.hpp  vector2D.hpp  vector3D.hpp
engine/include/engine/render/: color.hpp  graph.hpp  renderer.hpp
engine/include/engine/rendering/: color.hpp  renderer.hpp  util.hpp
engine/include/engine/rendering/3D/: camera.hpp  mesh.hpp  model.hpp  view.hpp
engine/include/engine/rendering/graphing/: graph.hpp
engine/src/engine/: engine.cpp
engine/src/engine/input/: inputhandler.cpp
engine/src/engine/rendering/: renderer.cpp
engine/src/engine/rendering/3D/: mesh.cpp  model.cpp
engine/src/engine/rendering/graphing/: graph.cpp
game/: CMakeLists.txt
game/include/game/collision/: collisionbox.hpp
game/include/game/entities/: astroid.hpp  bullet.hpp  entityfactory.hpp  spaceship.hpp  target.hpp
game/src/game/: main.cpp
game/src/game/collision/: collisionbox.cpp
game/src/game/entities/: entityfactory.cpp
tests/: CMakeLists.txt  test1.cpp  test_matrix2D.cpp  test_matrix3D.cpp  test_transform2D.cpp  test_transform3D.cpp  test_vector2D.cpp  test_vector3D.cpp
